--- a/vite-project/package.json
+++ b/vite-project/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "matchup-app",
+  "name": "vite-project",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -10,13 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@emotion/styled": "^11.11.0",
-    "@mui/material": "^5.13.0",
-    "node-sass": "^8.0.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router": "^6.11.1",
-    "react-router-dom": "^6.11.1"
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
@@ -27,7 +22,6 @@
     "eslint": "^8.38.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.4",
-    "sass": "^1.62.1",
     "typescript": "^5.0.2",
     "vite": "^4.3.2"
   }
