--- a/matchup-app/package.json
+++ b/matchup-app/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.13.0",
+    "@mui/styled-engine": "^5.12.3",
+    "axios": "^1.4.0",
     "node-sass": "^8.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
