--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
 fastapi~=0.95.1
-uvicorn[standard]
+uvicorn[standard]~=0.22.0
 pydantic~=1.10.7
 SQLAlchemy~=2.0.13
 pydantic[email]~=1.10.7
+jose~=1.0.0
+passlib~=1.7.4
