--- a/matchup-app/package.json
+++ b/matchup-app/package.json
@@ -15,6 +15,9 @@
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.13.0",
     "@mui/styled-engine": "^5.12.3",
+    "@swc/core": "^1.3.59",
+    "@swc/core-win32-x64-msvc": "^1.3.59",
+    "@swc/wasm": "^1.3.59",
     "axios": "^1.4.0",
     "node-sass": "^8.0.0",
     "react": "^18.2.0",
