--- a/requirements.txt
+++ b/requirements.txt
@@ -3,5 +3,5 @@ uvicorn[standard]~=0.22.0
 pydantic~=1.10.7
 SQLAlchemy~=2.0.13
 pydantic[email]~=1.10.7
-jose~=1.0.0
+python-jose[cryptography]~=3.3.0
 passlib~=1.7.4
