--- a/matchup-app/package.json
+++ b/matchup-app/package.json
@@ -20,6 +20,8 @@
     "node-sass": "^8.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-draggable": "^4.4.5",
+    "react-instagram-embed": "^3.0.0",
     "react-router": "^6.11.2",
     "react-router-dom": "^6.11.1"
   },
